Fix #9 where embeds aren't collapsed when in a collapsed bullet list.

--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,11 @@ iframe.auto-embed {
     height: 100%;
 }
 
+/* Handle bullet list */
+.HyperMD-list-line > .is-collapsed ~ .auto-embed-container{
+    display: none;
+}
+
 /* Default fallback */
 .default-fallback-embed-container {
     display: inline-block;
